--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ keywords = ["geometry", "mesh", "fem"]
 
 [dependencies]
 russell_chk = "0.2"
-russell_lab = "0.2"
+russell_lab = { path = "../russell/russell_lab", version = "0.2" }
