--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ keywords = ["geometry", "mesh", "fem"]
 [dependencies]
 russell_chk = "0.2"
 russell_lab = { path = "../russell/russell_lab", version = "0.2" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
