--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,4 @@ plotpy = { path = "../plotpy", version = "0.2" }
 russell_chk = "0.2"
 russell_lab = { path = "../russell/russell_lab", version = "0.2" }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+rmp-serde = "1.0.0-beta.2"
