--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,6 @@ plotpy = { path = "../plotpy", version = "0.2" }
 russell_chk = "0.2"
 russell_lab = { path = "../russell/russell_lab", version = "0.2" }
 russell_sparse = { path = "../russell/russell_sparse", version = "0.2" }
+russell_tensor = { path = "../russell/russell_tensor", version = "0.1" }
 serde = { version = "1.0", features = ["derive"] }
 rmp-serde = "1.0.0-beta.2"
