--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ russell_sparse = { path = "../russell/russell_sparse", version = "0.2" }
 russell_tensor = { path = "../russell/russell_tensor", version = "0.1" }
 rmp-serde = "1.0.0"
 serde = { version = "1.0.136", features = ["derive"] }
+
+[dev-dependencies]
+serde_json = "1.0.78"
