--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "gemlab"
 version = "0.2.0"
 edition = "2021"
 license = "MIT"
-description = "Geometry laboratory for finite element analyses"
+description = "Geometry and meshes laboratory for finite element analyses"
 homepage = "https://github.com/cpmech/gemlab"
 repository = "https://github.com/cpmech/gemlab"
 documentation = "https://docs.rs/gemlab"
