Use local crates, temporarily

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,15 +12,15 @@ categories = ["mathematics", "science"]
 keywords = ["geometry", "mesh", "fem"]
 
 [dependencies]
-plotpy = "0.3.1"
-# plotpy = { path = "../plotpy", version = "0.3" }
+# plotpy = "0.3.1"
+plotpy = { path = "../plotpy", version = "0.3" }
 russell_chk = "0.2"
-russell_lab = "0.3"
-russell_sparse = "0.3"
-russell_tensor = "0.2"
-# russell_lab = { path = "../russell/russell_lab", version = "0.3" }
-# russell_sparse = { path = "../russell/russell_sparse", version = "0.3" }
-# russell_tensor = { path = "../russell/russell_tensor", version = "0.2" }
+# russell_lab = "0.3"
+# russell_sparse = "0.3"
+# russell_tensor = "0.2"
+russell_lab = { path = "../russell/russell_lab", version = "0.3" }
+russell_sparse = { path = "../russell/russell_sparse", version = "0.3" }
+russell_tensor = { path = "../russell/russell_tensor", version = "0.2" }
 rmp-serde = "1.0.0"
 serde = { version = "1.0.136", features = ["derive"] }
 
