Impl Unstructured Generator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ russell_tensor = "0.4"
 russell_stat = "0.4"
 rmp-serde = "1.0.0"
 serde = { version = "1.0.136", features = ["derive"] }
+tritet = "0.2"
 
 [dev-dependencies]
 criterion = "0.3"
