--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ russell_tensor = { path = "../russell/russell_tensor", version = "0.5" }
 russell_stat = { path = "../russell/russell_stat", version = "0.5" }
 rmp-serde = "1.1"
 serde = { version = "1.0", features = ["derive"] }
-tritet = "0.2"
+tritet = { path = "../tritet", version = "0.2" }
 
 [dev-dependencies]
 criterion = "0.3"
