--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -1,17 +1,13 @@
 name: Test & Coverage
-on: [pull_request, push]
+on: [pull_request]
 jobs:
   test_and_coverage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Install Libraries
         run: |
-          sudo apt-get update -y && sudo apt-get install -y liblapacke-dev libopenblas-dev python3-matplotlib
-      - name: Install Rust
-        run: |
-          rustup toolchain install nightly --component llvm-tools-preview
-          rustup default nightly
+          sudo apt-get update -y && sudo apt-get install -y liblapacke-dev libmumps-seq-dev libopenblas-dev libsuitesparse-dev python3-matplotlib
       - name: Run tests
         run: |
           cargo test -- --nocapture
