--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -1,5 +1,5 @@
 name: Test & Coverage
-on: [pull_request]
+on: [pull_request, workflow_dispatch]
 jobs:
   test_and_coverage:
     runs-on: ubuntu-latest
