Further test pseudo-peripheral algo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,9 @@
   "cSpell.words": [
     "Bbᵐᵢ",
     "conv",
-    "nfacet",
+    "cuthill",
     "deque",
-    "cuthill"
+    "nfacet",
+    "Stockmeyer"
   ]
 }
