--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,10 @@ keywords = ["geometry", "mesh", "fem"]
 
 [dependencies]
 plotpy = "0.5"
-russell_lab = "0.7"
-russell_sparse = "0.7"
-russell_stat = "0.7"
-russell_tensor = "0.7"
+russell_lab = { path = "../russell/russell_lab", version = "0.7" }
+russell_sparse = { path = "../russell/russell_sparse", version = "0.7" }
+russell_stat = { path = "../russell/russell_stat", version = "0.7" }
+russell_tensor = { path = "../russell/russell_tensor", version = "0.7" }
 rmp-serde = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 tritet = "0.4"
